Cool. Now node packages was installed, but they are not tracked because of .gitignore. This commit with node packages installed and with top margin for timer button

--- a/client/main.scss
+++ b/client/main.scss
@@ -34,7 +34,7 @@ $blueGreyLightenColor-4: #cfd8dc;
     transition: opacity .2s ease; 
 }
 
-#timer-block {
+.timer-block {
 	margin-top: 120px;
 }
 
