--- a/client/main.scss
+++ b/client/main.scss
@@ -6,235 +6,8 @@ $red: #f44336;
 $brownLighten-5: #efebe9;
 $brownLighten-2: #a1887f;
 
-@mixin user-select-none() {
-	-webkit-user-select: none;  /* Chrome all / Safari all */
-	-moz-user-select: none;     /* Firefox all */
-	-ms-user-select: none;      /* IE 10+ */
-	-o-user-select: none;		/* Opera */
-	user-select: none;          /* Likely future */   
-}
-
-@mixin horizontal-center-absolute-element() {
-	position: absolute;
-	left: 0;
-	right: 0;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-/* Absolute center - vertical and horizontal */
-@mixin horizontal-vertical-center-absolute-element() {
-	@include horizontal-center-absolute-element;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-}
-
-@mixin fade-out() {
-    -o-transition: opacity .2s ease;
-    -ms-transition: opacity .2s ease;
-    -moz-transition: opacity .2s ease;
-    -webkit-transition: opacity .2s ease;
-    transition: opacity .2s ease; 
-}
-
-.timer-block {
-	margin-top: 60px;
-}
-
-.timer {
-	position: relative;
-	display: inline-block;
-	width: 280px;
-	height: 280px;
-	border: 3px solid $blueLighten-1;
-	border-radius: 50%;
-	cursor: pointer;
-	vertical-align: middle;
-}
-
-.timer:before {
-    content: '';
-    height: 100%;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-/* Timer start arrow */
-
-.timer-start_arrow {
-	@include horizontal-vertical-center-absolute-element;
-	@include user-select-none;
-	@include fade-out;
-	animation-duration: .3s;
-	height: 40%;
-}
-
-.timer-start_arrow .triangle {
-	@include horizontal-vertical-center-absolute-element;
-	display: block;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 33px 0 33px 55px;
-	border-color: transparent transparent transparent $blueGreyLightenColor-4;
-}
-
-/* Timer pause time */
-
-.timer-pause_time {
-	@include user-select-none;
-	@include horizontal-center-absolute-element;
-	@include fade-out;
-	bottom: 8%;
-	font-size: 2rem;
-	font-weight: 300;
-	color: $blueGreyLightenColor-1;
-	animation-duration: .4s;
-	/* display: none; */
-}
-
-/* Timer big nums */
-
-.timer-nums {
-	@include horizontal-vertical-center-absolute-element;
-	@include user-select-none;
-	@include fade-out;
-	animation-duration: .4s;
-	color: $blueGreyLightenColor-1;
-	padding-top: 5px;
-	font-size: 5.5rem;
-	font-weight: 200;
-	height: 45%;
-	/* display: none; */
-}
-
-
-.hidden {
-	opacity:0;
-	display: none;
-}
-
-.display-block {
-	opacity: 1;
-	display: block;
-}
-
-/* Header */
-
-.nav-header {
-	padding-left: 30px;
-	padding-right: 30px;
-	background-color: #fff;
-	position: relative;
-	z-index: 10;
-	/* margin-bottom: 70px; */
-}
-
-.nav-header img {
-	margin-top: 7px;
-	height: 50px;
-}
-
-.nav-header ul li a {
-	color: #424242;
-}
-
-/* Login # SignUp */
-
-.btn-login-signup {
-	width: 100%;
-}
-
-/* label focus color */
-.input-field input[type=text]:focus + label {
-	color: $green;
-}
-/* label underline focus color */
-.input-field input[type=text]:focus {
-	border-bottom: 1px solid $green;
-	box-shadow: 0 1px 0 0 $green;
-}
-/* valid color */
-.input-field input[type=text].valid {
-	border-bottom: 1px solid $green;
-	box-shadow: 0 1px 0 0 $green;
-}
-/* invalid color */
-.input-field input[type=text].invalid {
-	border-bottom: 1px solid $red;
-	box-shadow: 0 1px 0 0 $red;
-}
-
-/* email focus color */
-.input-field input[type=email]:focus + label {
-	color: $green;
-}
-/* email underline focus color */
-.input-field input[type=email]:focus {
-	border-bottom: 1px solid $green;
-	box-shadow: 0 1px 0 0 $green;
-}
-/* valid color */
-.input-field input[type=email].valid {
-	border-bottom: 1px solid $green;
-	box-shadow: 0 1px 0 0 $green;
-}
-/* invalid color */
-.input-field input[type=email].invalid {
-	border-bottom: 1px solid $red;
-	box-shadow: 0 1px 0 0 $red;
-}
-
-/* password focus color */
-.input-field input[type=password]:focus + label {
-	color: $green;
-}
-/* password underline focus color */
-.input-field input[type=password]:focus {
-	border-bottom: 1px solid $green;
-	box-shadow: 0 1px 0 0 $green;
-}
-/* valid color */
-.input-field input[type=password].valid {
-	border-bottom: 1px solid $green;
-	box-shadow: 0 1px 0 0 $green;
-}
-/* invalid color */
-.input-field input[type=password].invalid {
-	border-bottom: 1px solid $red;
-	box-shadow: 0 1px 0 0 $red;
-}
-
-
-/* Sidebar */
-
-.user-link {	
-	padding: 10px;
-	cursor: pointer;
-	img {
-		margin-right: 7px;
-	}
-	h5 {
-		font-size: 1.5rem;	
-	}
-}
-
-.side-navigation {
-	position: absolute;
-	width: 220px;
-	height: 100%;
-	left: 0;
-	color: $brownLighten-5;
-}
-
-.side-menu_link {
-	display: block;
-	padding: 10px 10px 10px 20px;
-	color: $brownLighten-5;
-}
-
-.side-menu_link:hover{
-	background-color: $brownLighten-2;
-}
-
+@import '../imports/ui/dashboard/Dashoard.scss';
+@import '../imports/ui/dashboard/TimerButtons.scss';
+@import '../imports/ui/top_navbar/Header.scss';
+@import '../imports/ui/account/LoginSignup.scss';
+@import '../imports/ui/sidebar/SideNav.scss';
