--- a/imports/ui/sidebar/SideNav.scss
+++ b/imports/ui/sidebar/SideNav.scss
@@ -5,7 +5,14 @@
 		margin-right: 7px;
 	}
 	h5 {
-		font-size: 1.5rem;	
+		font-size: 1.5rem;
+		color: $brownLighten-5;
+		a {
+			color: $brownLighten-5;
+		}
+		a:hover {
+			color: $brownLighten-4;
+		}
 	}
 }
 
