Commit for backup

--- a/imports/ui/dashboard/Profile.scss
+++ b/imports/ui/dashboard/Profile.scss
@@ -82,8 +82,9 @@
 	}
 
 	.dropdown-button {
-		padding-left: 25px;
-		padding-right: 25px;
+		padding-left: 6px;
+		padding-right: 6px;
+		/* font-size: 15px; */
 	}
 
 	.collection {
