Switched timer button to using userActivities collection, time tracking now for first activity in collection for current user, modified Activities api methods and fixed side bar height

--- a/imports/ui/sidebar/SideNav.scss
+++ b/imports/ui/sidebar/SideNav.scss
@@ -17,9 +17,11 @@
 }
 
 .side-navigation {
-	position: absolute;
+	position: fixed;
 	width: 16%;
 	height: 100%;
+	padding-top: 70px;
+	top: 0;
 	left: 0;
 	color: $brownLighten-5;
 }
