--- a/client/main.scss
+++ b/client/main.scss
@@ -8,6 +8,7 @@ $brownLighten-4: #d7ccc8;
 $brownLighten-2: #a1887f;
 $greyDarken-3: #424242;
 
+@import '../imports/ui/MainLayout.scss';
 @import '../imports/ui/dashboard/Dashoard.scss';
 @import '../imports/ui/dashboard/Masterboard.scss';
 @import '../imports/ui/dashboard/masterboard/TimerButtons.scss';
